--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -32,7 +32,7 @@ Stone Works = 石工所
 Must not be on plains = 平原には建設できません
 
 Stonehenge = ストーンヘンジ
-'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」- アリストテレス
+'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」 - アリストテレス
 
 Library = 図書館
 +1 Science Per 2 Population = 人口2人ごとに+1科学
@@ -40,14 +40,14 @@ Paper Maker = 製紙工場
 
 The Great Library = アレクサンドリア図書館
 Free Technology = テクノロジーを無償で1つ獲得
-'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 「図書館とは、古の聖人たちの遺産や美徳に満ちた神殿のごときものである。そしてそこには、曲学阿世とは無縁のものがすべて収められ、静かに佇んでいる。」- サー・フランシス・ベーコン
+'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 「図書館とは、古の聖人たちの遺産や美徳に満ちた神殿のごときものである。そしてそこには、曲学阿世とは無縁のものがすべて収められ、静かに佇んでいる。」 - サー・フランシス・ベーコン
 
 Circus = サーカス
 Walls = 防壁
 Walls of Babylon = バビロニアの城壁
 
 The Pyramids = ピラミッド
-'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 「死の苦しみよ、汝から我の肉体を逃れさせたまえ。我は神、テムなり。天空遥かに君臨するものなり。我を守りし力は神々と永久にあるものなり。」- サー・アーネスト・ウォリス・バッジ訳『エジプト死者の書』
+'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 「死の苦しみよ、汝から我の肉体を逃れさせたまえ。我は神、テムなり。天空遥かに君臨するものなり。我を守りし力は神々と永久にあるものなり。」 - サー・アーネスト・ウォリス・バッジ訳『エジプト死者の書』
 Worker construction increased 25% = 地形改善に要するターン-25%
 Provides 2 free workers = 無償で労働者2人を提供
 
@@ -56,7 +56,7 @@ Krepost = クレポスト
 Culture and Gold costs of acquiring new tiles reduced by 25% in this city = タイル獲得のための文化とゴールド-25%
 
 Colossus = ロードス島の巨神像
-'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 「いいか、あの男は狭い世界に、まるで巨神像のようにまたがっている。われわれ卑小な人間は、あの男の大きな股の下をくぐって、不名誉な墓を探しまわっているのだ。」- ウィリアム・シェイクスピア:ジュリアス・シーザー
+'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 「いいか、あの男は狭い世界に、まるで巨神像のようにまたがっている。われわれ卑小な人間は、あの男の大きな股の下をくぐって、不名誉な墓を探しまわっているのだ。」 - ウィリアム・シェイクスピア:ジュリアス・シーザー
 +1 gold from worked water tiles in city = 水のタイルに+1ゴールド
 
 Temple = 寺院
@@ -65,7 +65,7 @@ Doubles Gold given to enemy if city is captured = 都市を占領した文明が
 Mud Pyramid Mosque = 泥のピラミッド状モスク
 
 The Oracle = アポロ神殿
-'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 「古の賢者が言うには、私がギリシャで最も賢き者であると。それは私がギリシャで最も孤独だからである。無知の知を知るからである。」- ソクラテス
+'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 「古の賢者が言うには、私がギリシャで最も賢き者であると。それは私がギリシャで最も孤独だからである。無知の知を知るからである。」 - ソクラテス
 Free Social Policy = 社会制度を1つ無償で供給
 
 
@@ -74,13 +74,13 @@ Can only be built in coastal cities = 沿岸都市のみ建設可能
 +1 food from Ocean and Coast tiles = 海岸、海のタイルに食料+1
 
 The Great Lighthouse = ファロス灯台
-'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 「彼らは船に乗り海に出て、大海原で事業をなす者となった。彼らは深き海で主の御業を見た。驚くべき主の美業を。」- 旧約聖書詩編 107:23-24
+'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 「彼らは船に乗り海に出て、大海原で事業をなす者となった。彼らは深き海で主の御業を見た。驚くべき主の美業を。」 - 旧約聖書詩編 107:23-24
 All military naval units receive +1 movement and +1 sight = 全海軍ユニットに移動+1、視界+1
 
 National College = 国立大学
 
 Chichen Itza = チチェン・イツァ
-'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam =「チチェン・イツァにてカトゥンが確立する。イツァの居はそこに定められるべし。ケツァール鳥と、緑の鳥がやってくるだろう。アー・カンテナルがやってくるだろう。これは神の言葉である。イツァはやってくるだろう。」- チラム・バラムの書
+'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam =「チチェン・イツァにてカトゥンが確立する。イツァの居はそこに定められるべし。ケツァール鳥と、緑の鳥がやってくるだろう。アー・カンテナルがやってくるだろう。これは神の言葉である。イツァはやってくるだろう。」 - チラム・バラムの書
 Golden Age length increases +50% = 黄金時代の期間を50%延長
 
 Courthouse = 裁判所
@@ -93,72 +93,72 @@ Stable = 厩舎
 Circus Maximus = キルクス・マクシムス
 
 Hanging Gardens = 空中庭園
-'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 「はかなき者が主のお言葉を聞いたなら、晴れの日に麗しき庭園にいるかのごときであろう」- フランクフォート・ムーア
+'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 「はかなき者が主のお言葉を聞いたなら、晴れの日に麗しき庭園にいるかのごときであろう」 - フランクフォート・ムーア
 
 Colosseum = コロシアム
 
-Terracotta Army = 
-'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 
+Terracotta Army = 兵馬俑
+'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 「兵士たちを自分の子と考えよ。そうすれば兵たちはお前に従い深い渓谷にも入るであろう。兵士たちを自分の愛する息子と考えよ。そうすれば死の際まで共にいることができるであろう」 - 孫子
 
 Market = 市場
 Bazaar = バザー
-Provides 1 extra copy of each improved luxury resource near this City = 
-+2 Gold for each source of Oil and oasis = 
+Provides 1 extra copy of each improved luxury resource near this City = この都市付近で活用されているすべての高級資源を、もう1つずつ追加で提供する
++2 Gold for each source of Oil and oasis = 石油とオアシスは、ひとつの資源ごとにゴールド+2を供給する
 
-Monastery = 
+Monastery = 修道院
 
-Notre Dame = 
-'Architecture has recorded the great ideas of the human race. Not only every religious symbol, but every human thought has its page in that vast book.'  - Victor Hugo = 
+Notre Dame = ノートルダム大聖堂
+'Architecture has recorded the great ideas of the human race. Not only every religious symbol, but every human thought has its page in that vast book.'  - Victor Hugo = 「建築は、人類の偉大な思想を記録している。あらゆる宗教的なシンボルだけでなく、人間のあらゆる思想が、その膨大な書物の頁には記されているのだ。」 - ヴィクトル・ユーゴー
 
-Hagia Sophia = 
-'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 
-+33% great person generation in all cities = 
+Hagia Sophia = ハギア・ソフィア聖堂
+'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 「それは空に届かんばかりの高さでそびえ、他の建物から沸きあがってでもいるかのような高みから自分以外の街の部分を見下ろし、街の一部であるからにはそこに光彩を添え、しかし自らの美しさに喜びを感じている。」 - プロコピオス『建築論』
++33% great person generation in all cities = 全都市で偉人誕生の速度が33%上昇
 
-Mint = 
+Mint = 造幣所
 
-Machu Picchu = 
-'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
-Gold from all trade routes +25% = 
-Must have an owned mountain within 2 tiles = 
+Machu Picchu = マチュ・ピチュ
+'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 「ほとんどどんな空想小説も、あの花崗岩の砦ほどに冒険心をかきたてはしない。絶壁の頂上に戴かれた、インカの冠たるマチュピチュほどには。」 - ハイラム・ビンガム
+Gold from all trade routes +25% = 交易路からのゴールド産出量+25%
+Must have an owned mountain within 2 tiles = 山岳から2タイル以内にある都市にのみ建設可能
 
-Aqueduct = 
-40% of food is carried over after a new citizen is born = 
+Aqueduct = 用水路
+40% of food is carried over after a new citizen is born = 食料の40%を、新しく生まれる市民用に持ち越させる
 
-Great Wall = 
-'The art of war teaches us to rely not on the likelihood of the enemy's not attacking, but rather on the fact that we have made our position unassailable.'  - Sun Tzu = 
-Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = 
+Great Wall = 万里の長城
+'The art of war teaches us to rely not on the likelihood of the enemy's not attacking, but rather on the fact that we have made our position unassailable.'  - Sun Tzu = 「用兵の法は、其の来たらざらるを恃むこと無く、其の攻めざるを恃むこと無く、吾が攻むべからざる所あるを恃むなり」 - 孫子
+Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = 領土内に侵入した敵陸上ユニットが消費する移動ポイントが1タイルにつき+1増加(ダイナマイトを発見すると陳腐化)
 
-Workshop = 
-Longhouse = 
-+1 Production from each worked Forest tile = 
+Workshop = 工房
+Longhouse = ロングハウス
++1 Production from each worked Forest tile = 活用中のすべての森林タイルの生産力+1
 
-Forge = 
-+15% production of land units = 
+Forge = 溶鉱炉
++15% production of land units = 陸上ユニットの生産力+15%
 
-Harbor = 
-+1 production from all sea resources worked by the city = 
-Connects trade routes over water = 
+Harbor = 港
++1 production from all sea resources worked by the city = この都市の海洋資源の生産力+1。
+Connects trade routes over water = 首都との海上交易路を形成する
 
-University = 
-+2 Science from each worked Jungle tile = 
-Wat = 
+University = 大学
++2 Science from each worked Jungle tile = この都市の活用されるジャングルのタイルから科学+2
+Wat = ワット
 
-Oxford University = 
-Castle = 
-Mughal Fort = 
+Oxford University = オックスフォード大学
+Castle = 城
+Mughal Fort = ムガル要塞
 
-Alhambra = 
-'Justice is an unassailable fortress, built on the brow of a mountain which cannot be overthrown by the violence of torrents, nor demolished by the force of armies.'  - Joseph Addison = 
-All newly-trained melee, mounted, and armored units in this city receive the Drill I promotion = 
+Alhambra = アランブラ
+'Justice is an unassailable fortress, built on the brow of a mountain which cannot be overthrown by the violence of torrents, nor demolished by the force of armies.'  - Joseph Addison = 「正義とは、激流に沈められることも軍隊に破壊されることもない山の頂に建てられた難攻不落の要塞である」 - ヨゼフ・アディソン
+All newly-trained melee, mounted, and armored units in this city receive the Drill I promotion = 建造した都市から出現した非航空ユニットに昇進「訓練I」を付与
 
-Angkor Wat = 
-'The temple is like no other building in the world. It has towers and decoration and all the refinements which the human genius can conceive of.'  - Antonio da Magdalena = 
-Cost of acquiring new tiles reduced by 25% = 
+Angkor Wat = アンコールワット
+'The temple is like no other building in the world. It has towers and decoration and all the refinements which the human genius can conceive of.'  - Antonio da Magdalena = 「その寺院は世のどんな建造物とも似つかない。塔があり、装飾がなされ、天の才を持つ人間が思いつくかぎりの趣向が凝らされている。」 - アントニオ・ダ・マグダレーナ
+Cost of acquiring new tiles reduced by 25% = 新たなタイル獲得に必要な文化力およびゴールドが25%軽減
 
-Porcelain Tower = 
-'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 
-Free great scientist appears = 
-Science gained from research agreements +50% = 
+Porcelain Tower = 南京の陶塔
+'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 「物事は何でも、振り返ればより良く見える。もう手の届くことのない過去の塔から、追懐の情が身を乗りだして手招きをするのだ。」 - ジェームズ・ラッセル・ローウェル
+Free great scientist appears = 建設された都市の近くに大科学者が出現
+Science gained from research agreements +50% = 研究協定による科学力が50%上昇
 
 Ironworks = 
 Armory = 
