--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -637,30 +637,30 @@ Saving... =
 
 # Options
 
-Options = 
-Display options = 
-Gameplay options = 
-Other options = 
-Turns between autosaves = 
-Sound effects volume = 
-Music volume = 
-Download music = 
-Downloading... = 
-Could not download music! = 
-Show = 
-Hide = 
-Show worked tiles = 
-Show resources and improvements = 
-Check for idle units = 
-Move units with a single tap = 
-Show tutorials = 
-Auto-assign city production = 
-Auto-build roads = 
-Show minimap = 
-Show pixel units = 
-Show pixel improvements = 
-Enable nuclear weapons = 
-Fontset = 
+Options = 設定
+Display options = 表示設定
+Gameplay options = ゲーム設定
+Other options = その他の設定
+Turns between autosaves = オートセーブの切り替え
+Sound effects volume = 効果音の音量
+Music volume = 音楽の音量
+Download music = 音楽をダウンロード
+Downloading... = ダウンロード中
+Could not download music! = 音楽をダウンロードできませんでした
+Show = 表示
+Hide = 非表示
+Show worked tiles = 動作するユニットを表示
+Show resources and improvements = リソースと改善点を表示
+Check for idle units = 動作しないユニットを確認
+Move units with a single tap = シングルタップでユニットを移動
+Show tutorials = チュートリアルの表示
+Auto-assign city production = 都市生産の自動割り当て
+Auto-build roads = 道の自動構築
+Show minimap = ミニマップを表示
+Show pixel units = ピクセル単位を表示
+Show pixel improvements = ピクセルの改善を表示
+Enable nuclear weapons = 核兵器を有効にする
+Fontset = フォントセット
 
 # Notifications
 
