--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -160,14 +160,14 @@ Porcelain Tower = 南京の陶塔
 Free great scientist appears = 建設された都市の近くに大科学者が出現
 Science gained from research agreements +50% = 研究協定による科学力が50%上昇
 
-Ironworks = 
-Armory = 
-Observatory = 
-Opera House = 
+Ironworks = 製鉄所
+Armory = 武器庫
+Observatory = 天文台
+Opera House = オペラハウス
 
-Sistine Chapel = 
-'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 
-Culture in all cities increased by 25% = 
+Sistine Chapel = システィーナ礼拝堂
+'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 「私は神の特別な光のなかで生き、そして愛す」 - ミケランジェロ・ブオナローティ
+Culture in all cities increased by 25% = 全都市の文化力+25%
 
 Bank = 
 Hanse = 
