--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -169,119 +169,119 @@ Sistine Chapel = システィーナ礼拝堂
 'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 「私は神の特別な光のなかで生き、そして愛す」 - ミケランジェロ・ブオナローティ
 Culture in all cities increased by 25% = 全都市の文化力+25%
 
-Bank = 
-Hanse = 
-+5% Production for every Trade Route with a City-State in the empire = 
-Satrap's Court = 
+Bank = 銀行
+Hanse = ハンザ
++5% Production for every Trade Route with a City-State in the empire = 都市国家を結ぶ交易路一つにつき生産力+1%
+Satrap's Court = サトラップの王宮
 
-Forbidden Palace = 
-'Most of us can, as we choose, make of this world either a palace or a prison' - John Lubbock = 
-Unhappiness from population decreased by 10% = 
+Forbidden Palace = 紫禁城
+'Most of us can, as we choose, make of this world either a palace or a prison' - John Lubbock = 「我々のほとんどは選ぶことができる。この世を宮殿にするか、牢獄にするかを。」 - ジョン・ラボック
+Unhappiness from population decreased by 10% = 市民の不満度-10%
 
-Theatre = 
+Theatre = 劇場
 
-Leaning Tower of Pisa = 
-'Don't clap too hard - it's a very old building.' - John Osbourne = 
-Free Great Person = 
-Choose a free great person = 
-Get  = 
+Leaning Tower of Pisa = ピサの斜塔
+'Don't clap too hard - it's a very old building.' - John Osbourne = 「非常に古い建物につき、大きな拍手を禁ずる」 - ジョン・オズボーン
+Free Great Person = 無償の偉人
+Choose a free great person = 偉人を選べます
+Get  = 入手
 
-Himeji Castle = 
-'Bushido is realized in the presence of death. This means choosing death whenever there is a choice between life and death. There is no other reasoning.'  - Yamamoto Tsunetomo = 
-+15% combat strength for units fighting in friendly territory = 
+Himeji Castle = 姫路城
+'Bushido is realized in the presence of death. This means choosing death whenever there is a choice between life and death. There is no other reasoning.'  - Yamamoto Tsunetomo = 「武士道といふは､死ぬ事と見付けたり。二つ二つの場にて､早く死ぬ方に片付くばかりなり。」 - 山本常朝
++15% combat strength for units fighting in friendly territory = 自友国領内のユニットの攻撃力+15%
 
-Taj Mahal = 
-'The Taj Mahal rises above the banks of the river like a solitary tear suspended on the cheek of time.'  - Rabindranath Tagore = 
-Empire enters golden age = 
+Taj Mahal = タージ・マハル
+'The Taj Mahal rises above the banks of the river like a solitary tear suspended on the cheek of time.'  - Rabindranath Tagore = 「(タージ・マハルは)川のほとりから立ち上がり、時の頬に浮揚する一粒の涙のごとくである」 - ラビンドラナート・タゴール
+Empire enters golden age = 建設すると自国が黄金時代に入る
 
-Windmill = 
-Must not be on hill = 
-Museum = 
-Hermitage = 
+Windmill = 風車
+Must not be on hill = 丘陵には建設できません
+Museum = 博物館
+Hermitage = エルミタージュ美術館
 
-The Louvre = 
-'Every genuine work of art has as much reason for being as the earth and the sun'  - Ralph Waldo Emerson = 
-Free Great Artist Appears = 
+The Louvre = ルーブル美術館
+'Every genuine work of art has as much reason for being as the earth and the sun'  - Ralph Waldo Emerson = 「真の芸術作品は、全て地球や太陽と同等の存在理由をもっている。」 - ラルフ・ワルド・エマーソン
+Free Great Artist Appears = 無償の大芸術家の出現
 
-Seaport = 
-+1 production and gold from all sea resources worked by the city = 
-+15% production of naval units = 
+Seaport = 港湾
++1 production and gold from all sea resources worked by the city = 都市の海洋資源の生産力とゴールドが1%向上
++15% production of naval units = 海軍ユニットの生産力+15%
 
-Public School = 
-Hospital = 
-25% of food is carried over after a new citizen is born = 
-Factory = 
-Stock Exchange = 
+Public School = 公立学校
+Hospital = 病院
+25% of food is carried over after a new citizen is born = 食料の25%を、新しく生まれる市民用に持ち越させる
+Factory = 工場
+Stock Exchange = 証券取引所
 
-Big Ben = 
-'To achieve great things, two things are needed: a plan, and not quite enough time.'  - Leonard Bernstein = 
--15% to purchasing items in cities = 
+Big Ben = ビッグベン
+'To achieve great things, two things are needed: a plan, and not quite enough time.'  - Leonard Bernstein = 「偉大なことを成し遂げるには、2つのものが必要だ。その2つとは、計画と、不足気味の時間である。」 - レナード・バーンスタイン
+-15% to purchasing items in cities = ゴールドによる購入コストが全都市で15%下がる
 
-Cristo Redentor = 
-'Come to me, all who labor and are heavy burdened, and I will give you rest.'  - New Testament, Matthew 11:28 = 
-Culture cost of adopting new Policies reduced by 10% = 
+Cristo Redentor = コルコバードのキリスト像
+'Come to me, all who labor and are heavy burdened, and I will give you rest.'  - New Testament, Matthew 11:28 = 「すべて重荷を負い、苦労している者はわたしのもとに来なさい」 - 聖書:マタイによる福音書11:28
+Culture cost of adopting new Policies reduced by 10% = 新たな社会制度採用に必要な文化力-10%
 
-Kremlin = 
-'The Law is a fortress on a hill that armies cannot take or floods wash away.'   –- The Prophet Muhammed = 
-Defensive buildings in all cities are 25% more effective = 
+Kremlin = クレムリン宮殿
+'The Law is a fortress on a hill that armies cannot take or floods wash away.'   –- The Prophet Muhammed = 「法は丘の上の砦である。軍隊によっても、洪水によっても、奪われることはない。」 - 預言者マホメット
+Defensive buildings in all cities are 25% more effective = すべての都市の防衛建設物の効果が25％向上
 
-Neuschwanstein = 
-'...the location is one of the most beautiful to be found, holy and unapproachable, a worthy temple for the divine friend who has brought salvation and true blessing to the world.'  - King Ludwig II of Bavaria = 
-+1 happiness, +2 culture and +3 gold from every Castle = 
+Neuschwanstein = ノイシュヴァンシュタイン城
+'...the location is one of the most beautiful to be found, holy and unapproachable, a worthy temple for the divine friend who has brought salvation and true blessing to the world.'  - King Ludwig II of Bavaria = 「…どの場所よりも美しく、神聖で、排他的。世界に贖罪と本当の幸福をもたらす聖なる友にふさわしい神殿だ」 - バイエルン王ルートヴィヒ2世
++1 happiness, +2 culture and +3 gold from every Castle = 城1つにつきゴールド+3、文化力+2、幸福度+1
 
-Military Academy = 
+Military Academy = 士官学校
 
-Brandenburg Gate = 
-Free Great General appears near the Capital = 
-'Pale Death beats equally at the poor man's gate and at the palaces of kings.'  - Horace = 
+Brandenburg Gate = ブランデンブルク門
+Free Great General appears near the Capital = 大将が都市近郊に出現
+'Pale Death beats equally at the poor man's gate and at the palaces of kings.'  - Horace = 「蒼白い顔した死神は、乞食の門も王の宮殿も平等に敲く」 - ホラティウス
 
-Broadcast Tower = 
+Broadcast Tower = 放送塔
 
-Eiffel Tower = 
-'We live only to discover beauty, all else is a form of waiting'  - Kahlil Gibran = 
-Provides 1 happiness per social policy = 
+Eiffel Tower = エッフェル塔
+'We live only to discover beauty, all else is a form of waiting'  - Kahlil Gibran = 「我々は美を発見するためだけに生きている。その他すべてはそれを待つ形態のひとつにすぎない。」 - ハリール・ジブラーン
+ 1 happiness per social policy = 社会政策ごとに幸福度+1
 
-Statue of Liberty = 
-'Give me your tired, your poor, your huddled masses yearning to breathe free, the wretched refuse of your teeming shore. Send these, the homeless, tempest-tossed to me, I lift my lamp beside the golden door!'  - Emma Lazarus = 
-+1 Production from specialists = 
+Statue of Liberty = 自由の女神
+'Give me your tired, your poor, your huddled masses yearning to breathe free, the wretched refuse of your teeming shore. Send these, the homeless, tempest-tossed to me, I lift my lamp beside the golden door!'  - Emma Lazarus = 「あなたの国の疲れた者、貧しい者を私に与えよ。震え、寄り添いあい、自由に呼吸をすることを切望する者たちを。あなたの岸に溢れた、惨めに見捨てられた者たちを。私のところに送りなさい、家なき者、世に翻弄された者を。私は黄金の扉の傍らに灯をかかげよう！」 - エマ・ラザラス
++1 Production from specialists = 専門家から生産力+1
 
-Medical Lab = 
-Research Lab = 
-Hydro Plant = 
-Stadium = 
-Solar Plant = 
-Must be next to desert = 
-Must be next to mountain = 
+Medical Lab = 医学研究所
+Research Lab = 研究所
+Hydro Plant = 水力発電所
+Stadium = スタジアム
+Solar Plant = 太陽熱発電
+Must be next to desert = 砂漠か、砂漠の隣で建設可能
+Must be next to mountain = 山の隣で建設可能
 
-Sydney Opera House = 
-'Those who lose dreaming are lost.'  - Australian Aboriginal saying = 
-+1 population in each city = 
-+1 happiness in each city = 
+Sydney Opera House = シドニー・オペラハウス
+'Those who lose dreaming are lost.'  - Australian Aboriginal saying = 「夢を失ったものは敗者である」 - オーストラリア先住民の言葉
++1 population in each city = 各都市の人口+1
++1 happiness in each city = 各都市の幸福度+1
 
-Pentagon = 
-'In preparing for battle I have always found that plans are useless, but planning is indispensable.'  - Dwight D. Eisenhower = 
-Gold cost of upgrading military units reduced by 33% = 
+Pentagon = ペンタゴン
+'In preparing for battle I have always found that plans are useless, but planning is indispensable.'  - Dwight D. Eisenhower = 「私は常に、戦争では計画など役に立たぬということを実感してきた。しかしながら、計画を立てるということは不可欠なのである。」 - ドワイト D. アイゼンハワー
+Gold cost of upgrading military units reduced by 33% = 軍事ユニットのアップグレードに必要なゴールド-33%
 
-Manhattan Project = 
-Enables nuclear weapon = 
+Manhattan Project = マンハッタン計画
+Enables nuclear weapon = 核兵器を生産できる
 
-Apollo Program = 
-Enables construction of Spaceship parts = 
+Apollo Program = アポロ計画
+Enables construction of Spaceship parts = 宇宙船のパーツの構築ができる
 
-Nuclear Plant = 
+Nuclear Plant = 原子力発電所
 
-Spaceship Factory = 
-Increases production of spaceship parts by 50% = 
-Spaceship part = 
-SS Booster = 
-SS Cockpit = 
-SS Engine = 
-SS Stasis Chamber = 
+Spaceship Factory = 宇宙船工場
+Increases production of spaceship parts by 50% = 宇宙船のパーツの生産力+50％
+Spaceship part = 宇宙船のパーツ
+SS Booster = 宇宙船推進装置
+SS Cockpit = 宇宙船コクピット
+SS Engine = 宇宙船エンジン
+SS Stasis Chamber = 宇宙船冷凍睡眠室
 
-Hubble Space Telescope = 
-'The wonder is, not that the field of stars is so vast, but that man has measured it.'  - Anatole France = 
-2 free great scientists appear = 
-Increases production of spaceship parts by 25% = 
+Hubble Space Telescope = ハッブル宇宙望遠鏡
+'The wonder is, not that the field of stars is so vast, but that man has measured it.'  - Anatole France = 「驚くべきことは宇宙の広大さではなく、人間がその大きさを測ったことだ」 - アナトール・フランス
+2 free great scientists appear = 都市の近郊に大科学者2人出現
+Increases production of spaceship parts by 25% = 宇宙船のパーツの生産力+25％
 
 # Diplomacy,Trade,Nations
 
