--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -6,7 +6,7 @@ Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-le
 Enter the city screen!\nClick the city button twice = Öffne den Stadtbildschirm!\n Klicke zweimal den Stadtknopf.
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wähle eine Technologie zum Erforschen!\nKlicke auf den Tech-Button (grünlich, oben links) > \n wähle Technologie > klicke auf 'Forschung' (unten rechts). 
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Wähle Produktion!\nÖffne Stadtbildschirm > Klicke auf eine Einheit oder ein Gebäude (linke Seite unten) > \n Klicke auf 'in Warteschlange einreihen'
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beende eine Runde!\nGehe durch die Einheiten mit 'Nächste Einheit' > Klicke auf 'Nächste Runde'.
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Weise bearbeitete Felder neu zu!\nÖffne den Stadtbildschirm > klicke auf das zugewiesene (grüne) Feld, um es zu entfernen > \n klicke auf ein nicht zugewiesenes Feld, um die Bevölkerungszahl zuzuweisen.
 Meet another civilization!\nExplore the map until you encounter another civilization! = Triff eine andere Zivilisation!\n Erkunde die Karte, bis du einer anderen Zivilisation begegnest! 
@@ -42,7 +42,7 @@ Paper Maker = Papiermacher
 The Great Library = Die Große Bibliothek
 Free Technology = Kostenlose Technologie
  # Requires translation!
-'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
+'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 'Bibliotheken sind wie der Schrein, wo alle Reliquien der Heiligen vergangener Tage, voll der wahren Tugend, ruhen und bewahrt werden, und zwar ganz ohne Irreführung und Betrug.' - Sir Francis Bacon
 
 Circus = Zirkus
 Walls = Mauern
@@ -65,7 +65,7 @@ Temple = Tempel
 Burial Tomb = Grabstätte
 Doubles Gold given to enemy if city is captured = Verdoppelt die Menge an Gold für den Feind falls die Stadt erorbert wird
  # Requires translation!
-Mud Pyramid Mosque = 
+Mud Pyramid Mosque = Lehmmoschee
 
 The Oracle = Das Orakel
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'Das alte Orakel sagte, dass ich der weiseste aller Griechen sei. Weil ich allein, von allen Griechen, weiß, dass ich nichts weiß.'  -Socrates
@@ -115,17 +115,17 @@ Notre Dame = Notre-Dame
 
 Hagia Sophia = Hagia Sophia
  # Requires translation!
-'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 
+'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 'Weil sie sich in eine Höhe erhebt, um es dem Himmel gleichzutun, und als ob sie zwischen den anderen Gebäuden aufsteigt, steht sie in der Höhe und schaut auf den Rest der Stadt hinab und schmückt sie, weil sie ein Teil davon ist, doch sie erblüht in ihrer eigenen Schönheit.' - Prokop, De Aedificiis
 +33% great person generation in all cities = +33% erhöhte Wahrscheinlichkeit für die Geburt Großer Persönlichkeiten
 
 Mint = Prägeanstalt
 
 Machu Picchu = Machu Picchu
  # Requires translation!
-'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
+'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'Nur wenige Romanzen können jemals die der Granitzitadelle über den bedrohlichen Steilhängen von Machu Picchu, der Krönung des Landes der Inka, übersteigen.' - Hiram Bingham 
 Gold from all trade routes +25% = Gold von allen Handelsrouten um 25% erhöht
  # Requires translation!
-Must have an owned mountain within 2 tiles = 
+Must have an owned mountain within 2 tiles = Muss einen eigenen Berg innerhalb von 2 Feldern haben
 
 Aqueduct = Aquädukt
 40% of food is carried over after a new citizen is born = 40% der Nahrung wird übertragen, wenn ein neuer Einwohner geboren wird
@@ -140,10 +140,10 @@ Longhouse = Langhaus
 
 Forge = Schmiede
  # Requires translation!
-+15% production of land units = 
++15% production of land units = +15% Produktion von Landeinheiten
 
 Harbor = Hafen
-+1 production from all sea resources worked by the city = +1 Produktion von allen Meer Ressourcen die von dieser Stadt bewirtschaftet werden
++1 production from all sea resources worked by the city = +1 Produktion von allen Meeresressourcen, die von dieser Stadt bewirtschaftet werden
 Connects trade routes over water = Verbindet Handelsrouten über Wasser
 
 University = Universität
@@ -162,11 +162,11 @@ Angkor Wat = Angkor Wat
 'The temple is like no other building in the world. It has towers and decoration and all the refinements which the human genius can conceive of.'  - Antonio da Magdalena = 'Der Tempel ist wie kein anderes Gebäude der Welt. Er hat Türme und Dekoration und all die Feinheiten, die sich das menschliche Genie vorstellen kann.'  - Antonio da Magdalena
 Cost of acquiring new tiles reduced by 25% = Kosten um neue Felder zu kaufen ist um 25% verringert
 
-Porcelain Tower = Porzellan Turm
+Porcelain Tower = Porzellanturm
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Die Dinge erscheinen immer schöner, wenn wir auf sie zurückblicken, und aus diesem unzugänglichen Turm die Vergangenheit Sehnsüchtig lehnt und winkt.'  - James Russell Lowell
 Free great scientist appears = Eine kostenlose Große Wissenschaftlerin erscheint
  # Requires translation!
-Science gained from research agreements +50% = 
+Science gained from research agreements +50% = Erhaltene Wissenschaft aus Forschungsabkommen +50%
 
 Ironworks = Eisenhüttenwerk
 Armory = Waffenkammer
@@ -196,7 +196,7 @@ Get  = Erhalten
 
 Himeji Castle = Schloss Himeji
  # Requires translation!
-'Bushido is realized in the presence of death. This means choosing death whenever there is a choice between life and death. There is no other reasoning.'  - Yamamoto Tsunetomo = 
+'Bushido is realized in the presence of death. This means choosing death whenever there is a choice between life and death. There is no other reasoning.'  - Yamamoto Tsunetomo = 'Bushido wird in der Gegenwart des Todes umgesetzt. Das bedeutet, den Tod zu wählen, wann immer es eine Wahl zwischen Leben und Tod gibt. Es gibt keine andere Art des Denkens.' - Yamamoto Tsunetomo 
 +15% combat strength for units fighting in friendly territory = +15% Kampfstärke für Einheiten, die in einem alliierten Gebiet kämpfen
 
 Taj Mahal = Taj Mahal
@@ -252,7 +252,7 @@ Provides 1 happiness per social policy = Gibt +1 Zufriedenheit pro Sozialgrundsa
 
 Statue of Liberty = Freiheitsstatue
  # Requires translation!
-'Give me your tired, your poor, your huddled masses yearning to breathe free, the wretched refuse of your teeming shore. Send these, the homeless, tempest-tossed to me, I lift my lamp beside the golden door!'  - Emma Lazarus = 
+'Give me your tired, your poor, your huddled masses yearning to breathe free, the wretched refuse of your teeming shore. Send these, the homeless, tempest-tossed to me, I lift my lamp beside the golden door!'  - Emma Lazarus = 'Gebt mir eure Müden, eure Armen, eure unterdrückten Massen, die frei atmen wollen, den elenden Unrat eurerer gedrängten Küsten. Die Heimatlosen, vom Sturm Getriebenen, schickt sie zu mir: Ich erhebe mein Licht am goldenen Tor!' - Emma Lazarus 
 +1 Production from specialists = +1 Produktion von SpezialistInnen
 
 Medical Lab = Medizinisches Labor
