--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -2,7 +2,7 @@
 # Tutorial tasks
 
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = ユニットを移動させる\nユニットをクリック>移動先をクリック>矢印ポップアップをクリック
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 都市を建設\n開拓者(旗ユニット)を選択>「都市を建設」(左下隅)をクリック
+Found a city!\nSelect the Settler (flag) > Click on 'Found city' (bottom-left corner) = 都市を建設\n開拓者(旗ユニット)を選択>「都市を建設」(左下隅)をクリック
 Enter the city screen!\nClick the city button twice = 都市メニューを開く\n都市ボタンを2回クリック
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 研究する技術を選択\n技術ボタンをクリック(左上の緑色> \ n技術を選択>「研究」をクリックします（右下）
 Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
@@ -304,43 +304,43 @@ Remove from queue = 予約キューから消去
 Show stats drilldown = 都市の統計を表示
 Show construction queue = 生産キューを表示
 
-Diplomacy = 
-War = 
-Peace = 
-Declare war = 
-Declare war on [civName]? = 
-[civName] has declared war on us! = 
-[leaderName] of [nation] = 
-You'll pay for this! = 
-Negotiate Peace = 
-Peace with [civName]? = 
-Very well. = 
-Farewell. = 
-Sounds good! = 
-Not this time. = 
-Excellent! = 
+Diplomacy = 外交
+War = 戦争
+Peace = 平和
+Declare war = 宣戦布告する
+Declare war on [civName]? = [civName]に宣戦布告しますか？
+[civName] has declared war on us! = [civName]に宣戦布告されました！
+[leaderName] of [nation] = [nation]の[LeaderName]
+You'll pay for this! = 覚えておけ！
+Negotiate Peace = 平和交渉
+Peace with [civName]? = [civName]との平和条約
+Very well. = 結構。
+Farewell. = ごきげんよう。
+Sounds good! = いい。
+Not this time. = 今回は見送る。
+Excellent! = すばらしい！
 How about something else... = 
-A pleasure to meet you. = 
-Our relationship:  = 
-We have encountered the City-State of [name]! = 
-Declare Friendship ([numberOfTurns] turns) = 
-May our nations forever remain united! = 
-Indeed! = 
-Denounce ([numberOfTurns] turns) = 
-We will remember this. = 
+A pleasure to meet you. = お会いできて光栄です。
+Our relationship:  = 自文明との関係:
+We have encountered the City-State of [name]! = [name]の都市に遭遇しました！
+Declare Friendship ([numberOfTurns] turns) = 友好宣言([numberOfTurns]ターン)
+May our nations forever remain united! = 私たちの国が永遠に団結し続けますように！
+Indeed! = そうだな。
+Denounce ([numberOfTurns] turns) = 非難([numberOfTurns]ターン)
+We will remember this. = これを覚えている。
 
-[civName] has declared war on [targetCivName]! = 
-[civName] and [targetCivName] have signed the Peace Treaty! = 
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
-[civName] has denounced [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = [civName]は[targetCivName]に宣戦布告しました！
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName]と[targetCivName]は平和条約に署名しました！
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName]と[targetCivName]は有効宣言に署名しました！
+[civName] has denounced [targetCivName]! = [civName]は[targetCivName]を非難しました！
 
-Unforgivable = 
-Enemy = 
-Competitor = 
-Neutral = 
-Favorable = 
-Friend = 
-Ally = 
+Unforgivable = 許されない
+Enemy = 敵
+Competitor = 競争相手
+Neutral = 中立
+Favorable = 好ましい
+Friend = 友好
+Ally = 味方
 
 ## Diplomatic modifiers
 
@@ -739,16 +739,16 @@ Our proposed trade request is no longer relevant! =
 
 # World Screen UI
 
-Working... = 
-Waiting for other players... = 
+Working... = ロード中…
+Waiting for other players... = 他のプレイヤーを待っています…
 in = 
-Next turn = 
-Turn = 
-turns = 
-turn = 
-Next unit = 
+Next turn = 次のターン
+Turn = ターン
+turns = ターン
+turn = ターン
+Next unit = 次のユニット
 Pick a policy = 
-Movement = 
+Movement = 移動
 Strength = 
 Ranged strength = 
 Bombard strength = 
