--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -316,10 +316,10 @@ Negotiate Peace = 平和交渉
 Peace with [civName]? = [civName]との平和条約
 Very well. = 結構。
 Farewell. = ごきげんよう。
-Sounds good! = いい。
+Sounds good! = いいですね
 Not this time. = 今回は見送る。
 Excellent! = すばらしい！
-How about something else... = 
+How about something else... = 他に何か...
 A pleasure to meet you. = お会いできて光栄です。
 Our relationship:  = 自文明との関係:
 We have encountered the City-State of [name]! = [name]の都市に遭遇しました！
