--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -344,9 +344,9 @@ Ally = 味方
 
 ## Diplomatic modifiers
 
-You declared war on us! = 
-Your warmongering ways are unacceptable to us. = 
-You have captured our cities! = 
+You declared war on us! = あなたは我々に宣戦布告しました！
+You warmongering ways are unacceptable to us. = あなたの戦争挑発行為は我々に受け入れられません。
+You have captured our cities! = あなたは我々の都市を占領しました！
 We applaud your liberation of our conquered cities! = 
 Years of peace have strengthened our relations. = 
 Our mutual military struggle brings us closer together. = 
