--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -239,7 +239,7 @@ Broadcast Tower = 放送塔
 
 Eiffel Tower = エッフェル塔
 'We live only to discover beauty, all else is a form of waiting'  - Kahlil Gibran = 「我々は美を発見するためだけに生きている。その他すべてはそれを待つ形態のひとつにすぎない。」 - ハリール・ジブラーン
- 1 happiness per social policy = 社会政策ごとに幸福度+1
+Provides 1 happiness per social policy = 社会政策ごとに幸福度+1
 
 Statue of Liberty = 自由の女神
 'Give me your tired, your poor, your huddled masses yearning to breathe free, the wretched refuse of your teeming shore. Send these, the homeless, tempest-tossed to me, I lift my lamp beside the golden door!'  - Emma Lazarus = 「あなたの国の疲れた者、貧しい者を私に与えよ。震え、寄り添いあい、自由に呼吸をすることを切望する者たちを。あなたの岸に溢れた、惨めに見捨てられた者たちを。私のところに送りなさい、家なき者、世に翻弄された者を。私は黄金の扉の傍らに灯をかかげよう！」 - エマ・ラザラス
