--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -238,7 +238,7 @@ Free Great General appears near the Capital = 大将が都市近郊に出現
 Broadcast Tower = 放送塔
 
 Eiffel Tower = エッフェル塔
-'We live only to discover beauty, all else is a form of waiting'  - Kahlil Gibran = 「我々は美を発見するためだけに生きている。その他すべてはそれを待つ形態のひとつにすぎない。」 - ハリー
+'We live only to discover beauty, all else is a form of waiting'  - Kahlil Gibran = 「我々は美を発見するためだけに生きている。その他すべてはそれを待つ形態のひとつにすぎない。」 - ハリール・ジブラーン
 Provides 1 happiness per social policy = 社会政策ごとに幸福度+1
 
 Statue of Liberty = 自由の女神
@@ -332,7 +332,7 @@ We will remember this. = これを覚えている。
 [civName] has declared war on [targetCivName]! = [civName] は [targetCivName] に宣戦布告しました！
 [civName] and [targetCivName] have signed the Peace Treaty! = [civName] と [targetCivName] は平和条約に署名しました！
 [civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] と [targetCivName] は有効宣言に署名しました！
-[civName] has denounced [targetCivName]! = [civName ]は [targetCivName] を非難しました！
+[civName] has denounced [targetCivName]! = [civName]は [targetCivName] を非難しました！
 
 Unforgivable = 許されない
 Enemy = 敵
@@ -739,8 +739,8 @@ Our proposed trade request is no longer relevant! =
 
 # World Screen UI
 
-Working... = ロード中…
-Waiting for other players... = 他のプレイヤーを待っています…
+Working... = ロード中...
+Waiting for other players... = 他のプレイヤーを待っています...
 in = 
 Next turn = 次のターン
 Turn = ターン
